More Battle tests, started configuration reader